unpackaged/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>List of Competitors with details about the Division and Country they are related to</description>
    <label>Competitor</label>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>