unpackaged/main/default/objects/Competitor__c/fields/Country_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Text__c</fullName>
    <description>Text field to read the countries</description>
    <formula>IF( INCLUDES(  Country__c  , "Canada") , "Canada; ", "") &amp;
 IF( INCLUDES(  Country__c  , "United States") , "United States; ", "") &amp;
 IF( INCLUDES(  Country__c  , "Australia") , "Australia; ", "")</formula>
    <label>Country Text</label>
    <type>Text</type>
</CustomField>