unpackaged/main/default/objects/Competitor__c/fields/Division_s__c.field-meta.xml
<CustomField>
    <fullName>Division_s__c</fullName>
    <description>List the Black Diamond division that this company is a competitor for</description>
    <inlineHelpText>List the Black Diamond division that this company is a competitor for</inlineHelpText>
    <label>Division</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>