unpackaged/main/default/objects/Competitor__c/fields/Division_Text__c.field-meta.xml
<CustomField>
    <fullName>Division_Text__c</fullName>
    <description>Formula field to read mulit-select picklist values for search and filtering.</description>
    <formula>IF( INCLUDES(  Division_s__c , "Modular Solutions") , "Modular Solutions; ", "") &amp;
 IF( INCLUDES(  Division_s__c , "Workforce Solutions") , "Workforce Solutions; ", "") &amp;
 IF( INCLUDES(  Division_s__c , "Energy Services") , "Energy Services; ", "") &amp;
 IF( INCLUDES(  Division_s__c , "LodgeLink") , "LodgeLink; ", "") &amp;
 IF( INCLUDES(  Division_s__c , "International") , "International; ", "")</formula>
    <label>Division Text</label>
    <type>Text</type>
</CustomField>