unpackaged/main/default/objects/Competitor__c/listViews/All_Active_Competitors.listView-meta.xml
<ListView>
    <fullName>All_Active_Competitors</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Division_s__c</columns>
    <columns>Strengths__c</columns>
    <columns>Weaknesses__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Competitors</label>
</ListView>