unpackaged/main/default/objects/Competitor__c/listViews/Energy_Services_Competitors.listView-meta.xml
<ListView>
    <fullName>Energy_Services_Competitors</fullName>
    <columns>NAME</columns>
    <columns>Division_s__c</columns>
    <columns>Country__c</columns>
    <columns>Website__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Division_s__c</field>
        <operation>includes</operation>
        <value>Energy Services</value>
    </filters>
    <label>Energy Services Competitors-Active</label>
</ListView>