unpackaged/main/default/objects/Competitor__c/listViews/LodgeLink_Competitors_Active.listView-meta.xml
<ListView>
    <fullName>LodgeLink_Competitors_Active</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Division_s__c</columns>
    <columns>Strengths__c</columns>
    <columns>Weaknesses__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Division_s__c</field>
        <operation>includes</operation>
        <value>LodgeLink</value>
    </filters>
    <label>LodgeLink Competitors - Active</label>
</ListView>